# solana-program

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json
programs/zeroai-program/: Cargo.toml
programs/zeroai-program/src/: error.rs  lib.rs  state.rs
programs/zeroai-program/src/instructions/: add.rs  close.rs  initialize.rs  mod.rs
tests/: zeroai-program.ts
