[package]
name = "zeroai-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeroai_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-security-txt = "1.1.1"
anchor-lang = "0.29.0"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.10.1"